session_5/lb.tf
resource "aws_security_group" "lb_sg" {
  vpc_id      = module.main_vpc.vpc_id
  description = "Security group for the load balancer"

  ingress {
    description = "Allow HTTP traffic from anywhere"
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow traffic on port 8000 from itself"
    protocol    = "tcp"
    from_port   = 8000
    to_port     = 8000
    self        = true
  }

  egress {
    description = "Allow all outbound traffic"
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.prefix}lb-sg"
  }
}

resource "aws_lb" "lb" {
  name               = "${var.prefix}lb"
  load_balancer_type = "application"
  internal           = false
  security_groups    = [aws_security_group.lb_sg.id]
  subnets            = module.main_vpc.public_subnets

  tags = {
    Name = "${var.prefix}lb"
  }
}

resource "aws_lb_target_group" "tg" {
  name        = "${var.prefix}tg"
  port        = 8000
  protocol    = "HTTP"
  vpc_id      = module.main_vpc.vpc_id
  target_type = "ip"

  health_check {
    healthy_threshold   = 5
    unhealthy_threshold = 2
    interval            = 30
    matcher             = "200,302"
    path                = "/users"
    port                = "traffic-port"
    protocol            = "HTTP"
    timeout             = 5
  }

  tags = {
    Name = "${var.prefix}tg"
  }
}

resource "aws_lb_listener" "listener" {
  load_balancer_arn = aws_lb.lb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.tg.arn
  }
}
